# llm-guardrails-safety

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  HANDOFF.md  SAFETY_GUIDE.md
src/api/: __init__.py  main.py  middleware.py  routes.py  schemas.py
src/config/: settings.py
src/detection/: abuse.py  encoding.py  hallucination.py  injection.py  rate_limiter.py  topic_boundary.py
src/moderation/: content_filter.py  toxicity.py
src/policies/: engine.py  presets.py
src/validation/: output_validator.py  pii_detector.py  pii_redactor.py
tests/: conftest.py
tests/integration/: test_api.py  test_guard_pipeline.py
tests/unit/: test_abuse.py  test_hallucination.py  test_injection.py  test_output_validator.py  test_pii.py  test_policy_engine.py  test_rate_limiter.py  test_topic_boundary.py  test_toxicity.py
