[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-guardrails-safety"
version = "0.1.0"
description = "Production safety layer for LLM applications with prompt injection detection, content moderation, PII redaction, and output validation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "LLM Guardrails Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "anthropic>=0.39.0",
    "openai>=1.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "httpx>=0.25.0",
    "regex>=2023.10.3",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.26.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101", "S105"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"
